import java.util.ArrayList;

public class Account {
    private String username;
    private String password;
    private ArrayList<User> users;

    public void createAccount(){}

    public void getUsers(){}
}
