public class MainMenu {

    public void displayOptions(){

    }

    private void myList(){

    }

    private void haveWatchedList(){

    }

    private void changeUser(){

    }

    private void logout(){

    }
}
