import java.util.ArrayList;

public class Movie {
    private ArrayList<String> moviesList;

    public ArrayList<String> getMovies(){
        return this.moviesList;
    }
}