import java.util.ArrayList;

public class Series {
    int[][] seriesSeasons;
    ArrayList<String> seriesList;

    public ArrayList<String> getSeries(){
        return this.seriesList;
    }
}