import java.util.ArrayList;

public class StartMenu {
    private ArrayList<Account> accounts;

    void login(){

    }
}
