@startuml
'https://plantuml.com/class-diagram

abstract class Media
class StartMenu {
+ void startChill()
- void login ()
- void changeUser()

}
class MainMenu {

}

class Account {
- String username
- String password

}

class User {
+ String name
- ArrayList<String> haveWatched
- ArrayList<String> myList
}

class Kids {
+ String name
- ArrayList<String> haveWatched
- ArrayList<String> myList
 }

class Movie
class Series
class Category


StartMenu *-- Account
Account <|-- User
Account <|-- Kids
StartMenu *-- MainMenu
MainMenu *-- Media
Media <|-- Movie
Media <|-- Series
Media *-- Category

}

@enduml